syntax = "proto3";
package model;
option go_package = "/model/pb";
import "user_message.proto";

service UserService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc FindUserById(FindUserByIdRequest) returns (User);
  rpc FindUserByEmail(FindUserByEmailRequest) returns (User);
}